--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
+    "aos": "^2.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.31.0",
+    "react-tsparticles": "^2.12.2",
+    "slick-carousel": "^1.8.1",
+    "tsparticles": "^3.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
